--- a/src/components/i18n/en/global.json
+++ b/src/components/i18n/en/global.json
@@ -12,8 +12,8 @@
     "h2": "Useful resources for translators",
     "h31":"Resources in Spanish",
     "h31p1":"All the law to consult legislative texts, model contracts and Spanish forms.",
-    "h31p2":"Encyclopaedia of Economics, Encyclopaedia offering up-to-date terms from the world of economics and business.",
-    "h31p3":"Pan-Hispanic Dictionary of Legal Spanish. Dictionary produced by by the Real Academia Española which includes many definitions of the legal language.",
+    "h31p2":"Enciclopedia de Economía, Encyclopaedia offering up-to-date terms from the world of economics and business.",
+    "h31p3":"Diccionario panhispánico del español jurídico. Dictionary produced by by the Real Academia Española which includes many definitions of the legal language.",
     "h32":"Resources in French",
     "h32p1":"Le portail de l'Union européenne. Page where you can find information in French about the judicial organization in Europe and international institutions.",
     "h32p2":"Le Cedef. Le site du Centre de documentation Économie-Finance. Useful tool that helps find official texts and economic and financial information.",
