--- a/src/components/i18n/fr/global.json
+++ b/src/components/i18n/fr/global.json
@@ -12,8 +12,8 @@
     "h2":"Ressources utiles pour les traducteurs",
     "h31":"Ressources en anglais",
     "h31p1":"Toute la loi pour consulter les textes législatifs, les modèles de contrats et les formulaires espagnols.",
-    "h31p2":"Encyclopédie de l'économie, Encyclopédie proposant des termes actualisés du monde de l'économie et des affaires.",
-    "h31p3":"Dictionnaire pan-hispanique d'espagnol juridique. Dictionnaire produit par la Real Academia Española qui comprend de nombreuses définitions du langage juridique.",
+    "h31p2":"Enciclopedia de Economía, Encyclopédie proposant des termes actualisés du monde de l'économie et des affaires.",
+    "h31p3":"Diccionario panhispánico del español jurídico. Dictionnaire produit par la Real Academia Española qui comprend de nombreuses définitions du langage juridique.",
     "h32":"Ressources en français",
     "h32p1":"Le portail de l'Union européenne. Page où vous pouvez trouver des informations en français sur l'organisation judiciaire en Europe et les institutions internationales.",
     "h32p2":"Le Cedef. Le site du Centre de documentation Économie-Finance. Outil utile qui permet de trouver des textes officiels et des informations économiques et financières.",
